-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
Qt Creator 14.0.0-beta2
-
-
5a300a7fb (master)
Steps to reproduce:
- start QC with clean settings
- check the kits page
We stopped adding cdb 32bit automatically, so we should (finally) stop making the 32bit kit (holding the amd64_x86 compiler here (which likely had been the x86 compiler before)) the default one.
- mentioned in
-
Page Loading...
For Gerrit Dashboard: QTCREATORBUG-31119 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
574000,2 | PE: Make 32bit toolchain less prioritized | 14.0 | qt-creator/qt-creator | Status: ABANDONED | 0 | 0 |
580368,2 | ProjectExplorer: Tighten ABI check | master | qt-creator/qt-creator | Status: MERGED | +2 | +1 |