ProjectExplorer: Tighten ABI check

... when auto-detecting kits.
Take the entire ABI into account, including binary format and word
width.

Fixes: QTCREATORBUG-31119
Change-Id: I495faf3c54738750bddac65f5a1919144b9fecd4
Reviewed-by: Christian Stenger <christian.stenger@qt.io>